# proteus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clean_collector.py  clean_results.json  clean_test.json  cli.py  malicious_results.json  malware_collector.py  malware_test.json  ml_trainer.py  mypy.ini  package-lock.json  pyproject.toml  real_results.json  requirements.txt  scan_results.json  setup.py  string_test.py  test_dataset_builder.py
api/: main.py
docs/: index.html
models/: iso_model.pkl  rf_model.pkl
python/: __init__.py  analyzer.py  config.py  ml_detector.py  rate_limiter.py  requirements.txt  validators.py  yara_engine.py
src/: analysis_result.rs  elf_parser.rs  entropy.rs  heuristics.rs  lib.rs  packer_detector.rs  pe_parser.rs  python_bindings.rs  string_extractor.rs
web/: index.html
web/js/: app.js  chart.js  upload.js
yara_rules/: packers.yar  ransomware.yar  rats.yar  suspicious_behavior.yar  trojans.yar
