[package]
name = "proteus"
version = "0.1.0"
edition = "2021"

[lib]
name = "proteus"
crate-type = ["cdylib", "rlib"]

[dependencies]
goblin = "0.8"
sha2 = "0.10"
pyo3 = { version = "0.24", features = ["extension-module"] }
rayon = "1.10"
memmap2 = "0.9"
yara = { version = "0.30.0", features = ["bundled-4_5_2"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1