[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "proteus-analyzer"
version = "0.1.0"
description = "Advanced zero-day static analysis engine"
authors = [{name = "ChronoCoders", email = ""}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["malware", "static-analysis", "security", "binary-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Security",
]
dependencies = [
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "torch>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/ChronoCoders/proteus"
Documentation = "https://github.com/ChronoCoders/proteus/wiki"
Repository = "https://github.com/ChronoCoders/proteus"
Issues = "https://github.com/ChronoCoders/proteus/issues"

[tool.maturin]
features = ["pyo3/extension-module"]